<?xml version="1.0" encoding="utf-8"?>
<resources>
    //app name
    <string name="app_name">BookNook</string>
    //debug localization
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="language_selection">Change the language</string>
    <string name="settings">settings</string>

    //service name
    <string name="this_logo">logo app</string>
    //errorFragments
    <string name="update">Update</string>
    <string name="nointernet">The Internet waseaten by horses</string>
    //inlet
    <string name="inlet">book.inlet</string>
    <string name="signup">Sign up</string>
    <string name="login">Login in</string>
    //login
    <string name="welcomeback">welcome.back</string>
    <string name="email">email</string>
    <string name="password">password</string>
    //error login
    <string name="errorauthentication">Authentication failed</string>
    //welcome
    <string name="welcometext">hello.Curiosity</string>
    //basket
    <string name="basketempty">This basket is empty\n\n¯|_(ツ)_|¯</string>
    //menu
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="profile">profile</string>
    <string name="basket">basket</string>
    //home
    <string name="recommendations">.recommendations for you</string>
    <string name="recommendationssubtitle">we think youll like it</string>

    <string name="allproduct">.all products</string>
    <string name="allproductsubtitle">there is something interesting here too</string>

    <string name="add_basket">add basket</string>
    <string name="about">About the program</string>

    //order
    <string name="order_paid">the order has been paid for</string>
    <string name="total_cost">total cost</string>
    <string name="pay">to pay</string>
    <string name="delete">delete</string>


    <string name="abouttext">Welcome to the BookNook program, developed by Curiosity for educational purposes as part\nof practical training. The program is designed to streamline the book purchasing process and make it more\nconvenient for users. BookNook offers a unique opportunity to explore the world of literature, providing a wide\nrange of books across various genres.</string>

    //genres

    <string name="horrors">.horrors</string>
    <string name="horrors_info">it`s worth reading at night</string>

    <string name="russian_classics">.russian classics</string>
    <string name="russian_classics_info">the same rich folklore</string>

    //books

    <string name="eugene_onegin">Eugene Onegin</string>
    <string name="dubrovsky">Dubrovsky</string>
    <string name="master_and_margarita">The Master and Margarita</string>
    <string name="crime_and_punishment">Crime and punishment</string>
    <string name="war_and_peace">War and Peace</string>
    <string name="anna_karenina">Anna Karenina</string>
    <string name="karamazov_brothers">The Karamazov Brothers</string>

    <string name="amityville_horror">The Amityville Horror</string>
    <string name="gone_girl">Gone Girl</string>
    <string name="dreamcatcher">The Dreamcatcher</string>
    <string name="sixth_sense">The Sixth Sense</string>
    <string name="harry_potter">Harry Potter and the Deathly Hallows</string>

    <string name="pozor">1984</string>
    <string name="little_prince">The Little Prince</string>
    <string name="mockingbird">To Kill a Mockingbird</string>
    <string name="morphine">Morphine</string>
    <string name="norwegian_forest">Norwegian Forest</string>
    <string name="shame_sun">The Shame of the Sun</string>

    <string name="quantity">quantity</string>

</resources>