<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ShopFragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="416dp"
            android:layout_height="339dp"
            android:layout_marginTop="-90dp"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangeLanguage"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/dark_gray"
            android:gravity="left"
            android:text="@string/language_selection"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView8"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:text="@string/welcometext"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <TextView
            android:id="@+id/textView9"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/settings"
            android:textColor="@color/gray"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>