<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InletActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="351dp"
        android:layout_height="288dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/decorative_stylingtop" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/inlet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/whiteButtonStyle"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:onClick="login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        style="@style/whiteOutlineButtonStyle"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:onClick="login"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:srcCompat="@drawable/stick" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="311dp"
        android:layout_height="22dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/prestigepay" />
</androidx.constraintlayout.widget.ConstraintLayout>